# krok2-dent

./: .gitignore  CLAUDE.md  README.md
.claude/: launch.json
.github/workflows/: pages.yml
docs/: app.js  config.json  index.html  styles.css
docs/questions/: general.json  orthodontic.json  orthopedic.json  pediatric_surgical.json  pediatric_therapeutic.json  surgical.json  therapeutic.json
scripts/: curriculum.py  export.py  generate.py  openai_schemas.py  pyproject.toml  validate.py
scripts/prompts/: classify.md  generate.md  rewrite.md  validate.md
