[project]
name = "krok2-dent-pipeline"
version = "0.1.0"
description = "Парсинг, переформулювання та валідація запитань КРОК-2 Стоматологія"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "pdfplumber>=0.11.0",
    "pydantic>=2.7.0",
    "sentence-transformers>=3.0.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
