[project]
name = "krok2-dent-pipeline"
version = "0.2.0"
description = "Генерація бази запитань КРОК-2 Стоматологія через OpenAI API"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
